# todo-web-1-django

./: README.md  pyproject.toml
core/: settings.py
todos/: admin.py  models.py  urls.py  views.py
todos/migrations/: 0001_initial.py
todos/static/todos/css/: forms.css  style.css
todos/templates/todos/: base.html  task_create.html  task_delete.html  task_detail.html  task_edit.html  task_list.html
todos/tests/: test_models.py  test_views.py
